Ya hace el login correctamente, se genero el menu principal de una cuenta rol administrador sin funcionalidades
Hace falta corregir e implementar correctamente el registro y su interaccion

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="180dp"
-        android:fontFamily="@font/LeagueGothic_normal"
+        android:fontFamily="@font/nunito"
+        android:letterSpacing="0.05"
         android:text="@string/kurumapp"
         android:textColor="@color/Delft_blue"
         android:textSize="60sp"
@@ -41,12 +42,13 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:backgroundTint="@color/Delft_blue"
-        android:fontFamily="@font/Nunito_Light"
+        android:fontFamily="@font/nunito_light"
+        android:onClick="IrALogin"
         android:text="@string/iniciar_sesi_n"
         android:textAlignment="center"
+        android:textColor="@color/Mint_cream"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:onClick="IrALogin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -72,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
-            android:fontFamily="@font/Nunito_Light"
+            android:fontFamily="@font/nunito_light"
             android:text="@string/no_cuenta"
             android:textAlignment="textEnd"
             android:textColor="@color/Delft_blue"
@@ -83,7 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="@font/Nunito_Light"
+            android:fontFamily="@font/nunito_light"
             android:onClick="IrARegistro"
             android:text="@string/registrate"
             android:textColor="@color/UCLA_blue"
